improved courses pages

--- a/coloristic-course-minsk.html
+++ b/coloristic-course-minsk.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Курс "Цветоведение".</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#E7D0BC">
+    <meta name="viewport" content="widdiv=device-widdiv, initial-scale=1.0" />
+    <meta name="diveme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Программа обучения по курсу 'Цветоведение'" />        
@@ -33,11 +33,8 @@
 <nav>
 	<div class="main-page-btn">
 		<a href="index.html">
-			<div class="btn-text">
-				Вернуться на главную
-			</div>
+			<div class="btn-text">Вернуться на главную</div>
 		</a>
-		
 	</div>
 </nav>
 
@@ -47,67 +44,60 @@
 		<h1>Программа курса "Цветоведение"</h1>
 
 
-		<table class="table " border="1">
-			<tr>
-				<th class="t_numb">номер</th>
-				<th class="t_name">Название темы</th>
-				<th class="t_desc">Программа занятий по теме</th>
-				<th class="t_time">Время (академ. часы)</th>
-			</tr>
-			<tr>
-				<td class="t_numb">1</td>
-				<td class="t_name">Цветоведение. Физика цвета.</td>
-				<td class="t_desc">Название цветов в стандартной цветовой палитре, тепло-холодность, порядок смешивания (лекция и практическое задание «выкраски»).</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">2</td>
-				<td class="t_name">7 видов контраста.</td>
-				<td class="t_desc">Изучение видов контраста и графические упражнения по их созданию.</td>
-				<td class="t_time">8</td>
-			</tr>
-			<tr>
-				<td class="t_numb">3</td>
-				<td class="t_name">Ахроматические цвета.</td>
-				<td class="t_desc">Практика - градация и создание ахроматической композиции.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">4</td>
-				<td class="t_name">Хроматические цвета.</td>
-				<td class="t_desc">Практика - создание хроматической композиции «двуада» и «триада»</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">5</td>
-				<td class="t_name">Психология цвета.</td>
-				<td class="t_desc">Практика - создание абстрактных композиций на передачу эмоций, впечатлений, вкуса.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">6</td>
-				<td class="t_name">Цветоведение. Физика цвета.</td>
-				<td class="t_desc">Название цетов в стандартной цветовой палитре, теплохолодность, порядок смешивания (лекция и практическое задание «выкраски»).</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">7</td>
-				<td class="t_name">7 видов контраста.</td>
-				<td class="t_desc">Изучение видов контраста и графические упражнения по их созданию.</td>
-				<td class="t_time">4</td>
-			</tr>
+		<div class="table " border="1">
+			<div class="table-row head">
+				<div class="t_numb">№</div>
+				<div class="t_name">Название темы</div>
+				<div class="t_desc">Программа занятий по теме</div>
+				<div class="t_time">Время (академ. часы)</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">1</div>
+				<div class="t_name">Цветоведение. Физика цвета.</div>
+				<div class="t_desc">Название цветов в стандартной цветовой палитре, тепло-холодность, порядок смешивания (лекция и практическое задание «выкраски»).</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">2</div>
+				<div class="t_name">7 видов контраста.</div>
+				<div class="t_desc">Изучение видов контраста и графические упражнения по их созданию.</div>
+				<div class="t_time">8</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">3</div>
+				<div class="t_name">Ахроматические цвета.</div>
+				<div class="t_desc">Практика - градация и создание ахроматической композиции.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">4</div>
+				<div class="t_name">Хроматические цвета.</div>
+				<div class="t_desc">Практика - создание хроматической композиции «двуада» и «триада»</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">5</div>
+				<div class="t_name">Психология цвета.</div>
+				<div class="t_desc">Практика - создание абстрактных композиций на передачу эмоций, впечатлений, вкуса.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">6</div>
+				<div class="t_name">Цветоведение. Физика цвета.</div>
+				<div class="t_desc">Название цетов в стандартной цветовой палитре, теплохолодность, порядок смешивания (лекция и практическое задание «выкраски»).</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">7</div>
+				<div class="t_name">7 видов контраста.</div>
+				<div class="t_desc">Изучение видов контраста и графические упражнения по их созданию.</div>
+				<div class="t_time">4</div>
+			</div>
 
-		</table>
+		</div>
 	</div>
 	
 </div>
-
-
-
-
-
-
-
 
 
 
