--- a/composition-course-minsk.html
+++ b/composition-course-minsk.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Курс "Композиция".</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#E7D0BC">
+    <meta name="viewport" content="widdiv=device-widdiv, initial-scale=1.0" />
+    <meta name="diveme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Программа обучения по курсу 'Композиция'" />        
@@ -48,55 +48,55 @@
 
 
 		<table class="table " border="1">
-			<tr>
-				<th class="t_numb">номер</th>
-				<th class="t_name">Название темы</th>
-				<th class="t_desc">Программа занятий по теме</th>
-				<th class="t_time">Время (академ. часы)</th>
-			</tr>
-			<tr>
-				<td class="t_numb">1</td>
-				<td class="t_name">Понятие «Композиция».</td>
-				<td class="t_desc">Изучение типов композиции: 
-замкнутая/открытая, симметрия/асимметрия, статика/динамика и т.д., законы, золотое сечение (лекция и графические задания)</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">2</td>
-				<td class="t_name">Масштаб и пропорции.</td>
-				<td class="t_desc">Управление восприятием с помощью их изменений (лекция и практика).</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">3</td>
-				<td class="t_name">Композиционное равновесие.</td>
-				<td class="t_desc">Композиционное равновесие черного и белого, равновесие цветовых пятен (лекция и практика).</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">4</td>
-				<td class="t_name">Выразительность пятна, линии, точки.</td>
-				<td class="t_desc">Роль пятна, линии и точки в композиции (лекция и практика).</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">5</td>
-				<td class="t_name">Фактуры в графике и живописи.</td>
-				<td class="t_desc">Практические задания по созданию фактур.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">6</td>
-				<td class="t_name">Перспектива и ракурс.</td>
-				<td class="t_desc">Линейная и воздушная перспектива. Управление восприятием путем изменения ракурса (лекция и практические задания).</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">7</td>
-				<td class="t_name">Создание объема в композиции.</td>
-				<td class="t_desc">Упражнения на выявления и выразительность объемных форм.</td>
-				<td class="t_time">4</td>
-			</tr>
+			<div class="table-row head">
+				<div class="t_numb">номер</div>
+				<div class="t_name">Название темы</div>
+				<div class="t_desc">Программа занятий по теме</div>
+				<div class="t_time">Время (академ. часы)</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">1</div>
+				<div class="t_name">Понятие «Композиция».</div>
+				<div class="t_desc">Изучение типов композиции: 
+замкнутая/открытая, симметрия/асимметрия, статика/динамика и т.д., законы, золотое сечение (лекция и графические задания)</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">2</div>
+				<div class="t_name">Масштаб и пропорции.</div>
+				<div class="t_desc">Управление восприятием с помощью их изменений (лекция и практика).</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">3</div>
+				<div class="t_name">Композиционное равновесие.</div>
+				<div class="t_desc">Композиционное равновесие черного и белого, равновесие цветовых пятен (лекция и практика).</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">4</div>
+				<div class="t_name">Выразительность пятна, линии, точки.</div>
+				<div class="t_desc">Роль пятна, линии и точки в композиции (лекция и практика).</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">5</div>
+				<div class="t_name">Фактуры в графике и живописи.</div>
+				<div class="t_desc">Практические задания по созданию фактур.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">6</div>
+				<div class="t_name">Перспектива и ракурс.</div>
+				<div class="t_desc">Линейная и воздушная перспектива. Управление восприятием путем изменения ракурса (лекция и практические задания).</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">7</div>
+				<div class="t_name">Создание объема в композиции.</div>
+				<div class="t_desc">Упражнения на выявления и выразительность объемных форм.</div>
+				<div class="t_time">4</div>
+			</div>
 
 		</table>
 	</div>
@@ -124,17 +124,17 @@
 	</script>
 
 
-	<!-- Yandex.Metrika counter -->
+	<!-- Yandex.Mediv class="table-row"ika counter -->
 	<script type="text/javascript" >
 	    (function (d, w, c) {
 	        (w[c] = w[c] || []).push(function() {
-	            try {
-	                w.yaCounter49823563 = new Ya.Metrika2({
+	            div class="table-row"y {
+	                w.yaCounter49823563 = new Ya.Mediv class="table-row"ika2({
 	                    id:49823563,
-	                    clickmap:true,
-	                    trackLinks:true,
-	                    accurateTrackBounce:true,
-	                    webvisor:true
+	                    clickmap:div class="table-row"ue,
+	                    div class="table-row"ackLinks:div class="table-row"ue,
+	                    accuratediv class="table-row"ackBounce:div class="table-row"ue,
+	                    webvisor:div class="table-row"ue
 	                });
 	            } catch(e) { }
 	        });
@@ -143,16 +143,16 @@
 	            s = d.createElement("script"),
 	            f = function () { n.parentNode.insertBefore(s, n); };
 	        s.type = "text/javascript";
-	        s.async = true;
-	        s.src = "https://mc.yandex.ru/metrika/tag.js";
+	        s.async = div class="table-row"ue;
+	        s.src = "https://mc.yandex.ru/mediv class="table-row"ika/tag.js";
 
 	        if (w.opera == "[object Opera]") {
 	            d.addEventListener("DOMContentLoaded", f, false);
 	        } else { f(); }
-	    })(document, window, "yandex_metrika_callbacks2");
+	    })(document, window, "yandex_mediv class="table-row"ika_callbacks2");
 	</script>
 	<noscript><div><img src="https://mc.yandex.ru/watch/49823563" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-	<!-- /Yandex.Metrika counter -->
+	<!-- /Yandex.Mediv class="table-row"ika counter -->
 
 
 
