--- a/drawing-course-minsk.html
+++ b/drawing-course-minsk.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Курс "Академический рисунок".</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#E7D0BC">
+    <meta name="viewport" content="widdiv=device-widdiv, initial-scale=1.0" />
+    <meta name="diveme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Программа обучения по курсу 'Академический рисунок'" />        
@@ -46,78 +46,78 @@
 	<div class="container">
 		<h1>Программа курса "Академический рисунок"</h1>
 		<table class="table " border="1">
-			<tr>
-				<th class="t_numb">номер</th>
-				<th class="t_name">Название темы</th>
-				<th class="t_desc">Программа занятий по теме</th>
-				<th class="t_time">Время (академ. часы)</th>
-			</tr>
-			<tr>
-				<td class="t_numb">1</td>
-				<td class="t_name">Вводное занятие. Особенности академического рисунка.</td>
-				<td class="t_desc">Упражнения на развитие руки и глазомера (Штрихи, линии, деление отрезков методом визирования и т.д.)</td>
-				<td class="t_time">3</th>
-			</tr>
-			<tr>
-				<td class="t_numb">2</td>
-				<td class="t_name">Тоновая растяжка.</td>
-				<td class="t_desc">Практическое изучение градации тона.</td>
-				<td class="t_time">10</td>
-			</tr>
-			<tr>
-				<td class="t_numb">3</td>
-				<td class="t_name">Понятие «Перспектива».</td>
-				<td class="t_desc">Изображение предметной плоскости в перспективе.</td>
-				<td class="t_time">11</td>
-			</tr>
-			<tr>
-				<td class="t_numb">4</td>
-				<td class="t_name">Построение геометрических фигур.</td>
-				<td class="t_desc">Линейно-конструктивное и светотеневое изображение геометрических фигур (куб, шар, четырех и шестигранная призма, цилиндр,конус).</td>
-				<td class="t_time">по 8 на постановку.</td>
-			</tr>
-			<tr>
-				<td class="t_numb">5</td>
-				<td class="t_name">Драпировка.</td>
-				<td class="t_desc">Работа с изображением складок ткани, передача материала.</td>
-				<td class="t_time">12</td>
-			</tr>
-			<tr>
-				<td class="t_numb">6</td>
-				<td class="t_name">Розетка (симметричная и ассиметричная).</td>
-				<td class="t_desc">Построение гипсовой розетки, передача материала и пластики деталей.</td>
-				<td class="t_time">12</td>
-			</tr>
-			<tr>
-				<td class="t_numb">7</td>
-				<td class="t_name">Детали лица (нос, ухо, губы, глаза Давида).</td>
-				<td class="t_desc">Выполнение тонового рисунка гипсовых частей лица, особенности построения и наложения тона.</td>
-				<td class="t_time">по 12 на постановку.</td>
-			</tr>
-			<tr>
-				<td class="t_numb">8</td>
-				<td class="t_name">Череп.</td>
-				<td class="t_desc">Костные ориентиры человеческого черепа, тональный рисунок.</td>
-				<td class="t_time">10</td>
-			</tr>
-			<tr>
-				<td class="t_numb">9</td>
-				<td class="t_name">Этапы построения головы.</td>
-				<td class="t_desc">Конструктивно-тоновой рисунок обрубовки, экорше, античной головы .</td>
-				<td class="t_time">по 15 на постановку.</td>
-			</tr>
-			<tr>
-				<td class="t_numb">10</td>
-				<td class="t_name">Сложная античная голова с драпировкой.</td>
-				<td class="t_desc">Тоновой рисунок, детальная проработка головы в пространстве.</td>
-				<td class="t_time">22</td>
-			</tr>
-			<tr>
-				<td class="t_numb">11</td>
-				<td class="t_name">Гипсовая голова с плечевым поясом.</td>
-				<td class="t_desc">Строение плечевого пояса. Тоновой рисунок.</td>
-				<td class="t_time">25</td>
-			</tr>
+			<div class="table-row head">
+				<div class="t_numb">номер</div>
+				<div class="t_name">Название темы</div>
+				<div class="t_desc">Программа занятий по теме</div>
+				<div class="t_time">Время (академ. часы)</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">1</div>
+				<div class="t_name">Вводное занятие. Особенности академического рисунка.</div>
+				<div class="t_desc">Упражнения на развитие руки и глазомера (Штрихи, линии, деление отрезков методом визирования и т.д.)</div>
+				<div class="t_time">3</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">2</div>
+				<div class="t_name">Тоновая растяжка.</div>
+				<div class="t_desc">Практическое изучение градации тона.</div>
+				<div class="t_time">10</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">3</div>
+				<div class="t_name">Понятие «Перспектива».</div>
+				<div class="t_desc">Изображение предметной плоскости в перспективе.</div>
+				<div class="t_time">11</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">4</div>
+				<div class="t_name">Построение геометрических фигур.</div>
+				<div class="t_desc">Линейно-конструктивное и светотеневое изображение геометрических фигур (куб, шар, четырех и шестигранная призма, цилиндр,конус).</div>
+				<div class="t_time">8</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">5</div>
+				<div class="t_name">Драпировка.</div>
+				<div class="t_desc">Работа с изображением складок ткани, передача материала.</div>
+				<div class="t_time">12</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">6</div>
+				<div class="t_name">Розетка (симметричная и ассиметричная).</div>
+				<div class="t_desc">Построение гипсовой розетки, передача материала и пластики деталей.</div>
+				<div class="t_time">12</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">7</div>
+				<div class="t_name">Детали лица (нос, ухо, губы, глаза Давида).</div>
+				<div class="t_desc">Выполнение тонового рисунка гипсовых частей лица, особенности построения и наложения тона.</div>
+				<div class="t_time">12</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">8</div>
+				<div class="t_name">Череп.</div>
+				<div class="t_desc">Костные ориентиры человеческого черепа, тональный рисунок.</div>
+				<div class="t_time">10</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">9</div>
+				<div class="t_name">Этапы построения головы.</div>
+				<div class="t_desc">Конструктивно-тоновой рисунок обрубовки, экорше, античной головы .</div>
+				<div class="t_time">15</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">10</div>
+				<div class="t_name">Сложная античная голова с драпировкой.</div>
+				<div class="t_desc">Тоновой рисунок, детальная проработка головы в пространстве.</div>
+				<div class="t_time">22</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">11</div>
+				<div class="t_name">Гипсовая голова с плечевым поясом.</div>
+				<div class="t_desc">Строение плечевого пояса. Тоновой рисунок.</div>
+				<div class="t_time">25</div>
+			</div>
 
 		</table>
 	</div>
@@ -126,16 +126,8 @@
 
 
 
-
-
-
-
-
-
-
-	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123176832-1"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123176832-1"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
@@ -143,10 +135,10 @@
 
 	  gtag('config', 'UA-123176832-1');
 	</script>
- -->
+
 
 	<!-- Yandex.Metrika counter -->
-	<!-- <script type="text/javascript" >
+	<script type="text/javascript" >
 	    (function (d, w, c) {
 	        (w[c] = w[c] || []).push(function() {
 	            try {
@@ -172,7 +164,7 @@
 	        } else { f(); }
 	    })(document, window, "yandex_metrika_callbacks2");
 	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/49823563" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
+	<noscript><div><img src="https://mc.yandex.ru/watch/49823563" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 
 
