--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
 	 <section class="courses" property="mainEntityOfPage">
 	 	<div class="container">
 	 		<h1>Курсы рисования в Минске с ценами. Взрослые и подростковые группы, любой уровень подготовки.</h1>
-			<div class="pdf">
+<!-- 			<div class="pdf">
 				<a class="pdf-link" href="Курсы рисования в Минске - студия Акварель.pdf">Курсы рисования в Минске - скачать pdf- файл.</a>
-			</div>
+			</div> -->
 			
 			<div class="courses-list" property="makesOffer">
 
@@ -590,6 +590,8 @@
 			<!-- GOOGLE MAP -->
 			<!-- 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.015277365151!2d27.475572859221096!3d53.91370442797141!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbc539ff97d167%3A0x18a4e25a6c4ce367!2z0YPQu9C40YbQsCDQnNCw0YLRg9GB0LXQstC40YfQsCAyMywg0JzQuNC90YHQug!5e0!3m2!1sru!2sby!4v1532163852443" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe> -->
 		</div>
+
+
 		<div class="unp" property="legalName">
 			ИП Домбровская - УНП 193072191
 		</div>
@@ -630,6 +632,7 @@
 	<div class="free-lesson link-to-contacts string-above-head">
 		<div class="container running-string">
 			<p>Приходите на пробное занятие!</p>
+
 		</div>
 	</div>
 
@@ -717,6 +720,7 @@
 
 
     <script src="js/main.js"></script>
+
 
     
 	<!-- Global site tag (gtag.js) - Google Analytics -->
