--- a/painting-course-for-enrollee-minsk.html
+++ b/painting-course-for-enrollee-minsk.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Курс "Живопись для поступающих".</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#E7D0BC">
+    <meta name="viewport" content="widdiv=device-widdiv, initial-scale=1.0" />
+    <meta name="diveme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Программа обучения по курсу 'Живопись для поступающих'" />        
@@ -48,90 +48,90 @@
 		<p class='wise-painter-said'>Краски у нас – орудие, они должны выражать наши мысли. Колорит наш – не изящные пятна, он должен выражать нам настроение картины, ее душу, он должен расположить и захватить всего зрителя, как аккорд в музыке.</p>
 		<p class='signature'>Илья Репин</p>
 		<table class="table " border="1">
-			<tr>
-				<th class="t_numb">номер</th>
-				<th class="t_name">Название темы</th>
-				<th class="t_desc">Программа занятий по теме</th>
-				<th class="t_time">Время (академ. часы)</th>
-			</tr>
-			<tr>
-				<td class="t_numb">1</td>
-				<td class="t_name">Живопись и ее связь с рисунком <br> …Гризайль.</td>
-				<td class="t_desc">Практическая работа над выявлением связи между тоном и цветом на примере простого натюрморта.</td>
-				<td class="t_time">8</td>
-			</tr>
-			<tr>
-				<td class="t_numb">2</td>
-				<td class="t_name">Типы колорита.</td>
-				<td class="t_desc">Техника акварель. Натюрморт с предметами, близкими по тону.</td>
-				<td class="t_time">10</td>
-			</tr>
-			<tr>
-				<td class="t_numb">3</td>
-				<td class="t_name">Типы колорита.</td>
-				<td class="t_desc">Техника акварель. Натюрморт с предметами контрастными по тону и цвету.</td>
-				<td class="t_time">11</td>
-			</tr>
-			<tr>
-				<td class="t_numb">4</td>
-				<td class="t_name">Типы колорита.</td>
-				<td class="t_desc">Техника акварель. Гармония двуады,триады …</td>
-				<td class="t_time">по 11</td>
-			</tr>
-			<tr>
-				<td class="t_numb">5</td>
-				<td class="t_name">Типы колорита.</td>
-				<td class="t_desc">Затемнение и разбел.</td>
-				<td class="t_time">12</td>
-			</tr>
-			<tr>
-				<td class="t_numb">6</td>
-				<td class="t_name">Передача материала и применение воздушной перспективы в живописи.</td>
-				<td class="t_desc">Техника акварель. Работа над керамическими и деревянными предметами.</td>
-				<td class="t_time">10</td>
-			</tr>
-			<tr>
-				<td class="t_numb">7</td>
-				<td class="t_name">Передача материала и применение воздушной перспективы в живописи.</td>
-				<td class="t_desc">Работа со стеклянными предметами и предметами из металла.</td>
-				<td class="t_time">5</td>
-			</tr>
-			<tr>
-				<td class="t_numb">8</td>
-				<td class="t_name">Итоговая работа в технике акварель.</td>
-				<td class="t_desc"> </td>
-				<td class="t_time">11</td>
-			</tr>
-			<tr>
-				<td class="t_numb">9</td>
-				<td class="t_name">Техника гуашь.</td>
-				<td class="t_desc">Изображение сложного натюрморта в холодном колорите.</td>
-				<td class="t_time">11</td>
-			</tr>
-			<tr>
-				<td class="t_numb">10</td>
-				<td class="t_name">Гуашь.</td>
-				<td class="t_desc">Изображение сложного натюрморта в теплом колорите.</td>
-				<td class="t_time">11</td>
-			</tr>
-			<tr>
-				<td class="t_numb">11</td>
-				<td class="t_name">Передача материала в технике гуашь.</td>
-				<td class="t_desc">Сложный натюрморт с разнофактурными предметами.</td>
-				<td class="t_time">15</td>
-			</tr>
-			<tr>
-				<td class="t_numb">12</td>
-				<td class="t_name">Работа в смешаном колорите.</td>
-				<td class="t_desc">Сложный натюрморт с разнофактурными предметами разными по колориту.</td>
-				<td class="t_time">15</td>
-			</tr>
-			<tr>
-				<td class="t_numb">13</td>
-				<td class="t_name">Итоговая работа в технике гуашь.</td>
-				<td class="t_desc"> </td>
-				<td class="t_time">15</td>
-			</tr>
+			<div class="table-row head">
+				<div class="t_numb">номер</div>
+				<div class="t_name">Название темы</div>
+				<div class="t_desc">Программа занятий по теме</div>
+				<div class="t_time">Время (академ. часы)</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">1</div>
+				<div class="t_name">Живопись и ее связь с рисунком <br> …Гризайль.</div>
+				<div class="t_desc">Практическая работа над выявлением связи между тоном и цветом на примере простого натюрморта.</div>
+				<div class="t_time">8</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">2</div>
+				<div class="t_name">Типы колорита.</div>
+				<div class="t_desc">Техника акварель. Натюрморт с предметами, близкими по тону.</div>
+				<div class="t_time">10</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">3</div>
+				<div class="t_name">Типы колорита.</div>
+				<div class="t_desc">Техника акварель. Натюрморт с предметами контрастными по тону и цвету.</div>
+				<div class="t_time">11</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">4</div>
+				<div class="t_name">Типы колорита.</div>
+				<div class="t_desc">Техника акварель. Гармония двуады,триады …</div>
+				<div class="t_time">по 11</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">5</div>
+				<div class="t_name">Типы колорита.</div>
+				<div class="t_desc">Затемнение и разбел.</div>
+				<div class="t_time">12</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">6</div>
+				<div class="t_name">Передача материала и применение воздушной перспективы в живописи.</div>
+				<div class="t_desc">Техника акварель. Работа над керамическими и деревянными предметами.</div>
+				<div class="t_time">10</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">7</div>
+				<div class="t_name">Передача материала и применение воздушной перспективы в живописи.</div>
+				<div class="t_desc">Работа со стеклянными предметами и предметами из металла.</div>
+				<div class="t_time">5</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">8</div>
+				<div class="t_name">Итоговая работа в технике акварель.</div>
+				<div class="t_desc"> </div>
+				<div class="t_time">11</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">9</div>
+				<div class="t_name">Техника гуашь.</div>
+				<div class="t_desc">Изображение сложного натюрморта в холодном колорите.</div>
+				<div class="t_time">11</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">10</div>
+				<div class="t_name">Гуашь.</div>
+				<div class="t_desc">Изображение сложного натюрморта в теплом колорите.</div>
+				<div class="t_time">11</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">11</div>
+				<div class="t_name">Передача материала в технике гуашь.</div>
+				<div class="t_desc">Сложный натюрморт с разнофактурными предметами.</div>
+				<div class="t_time">15</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">12</div>
+				<div class="t_name">Работа в смешаном колорите.</div>
+				<div class="t_desc">Сложный натюрморт с разнофактурными предметами разными по колориту.</div>
+				<div class="t_time">15</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">13</div>
+				<div class="t_name">Итоговая работа в технике гуашь.</div>
+				<div class="t_desc"> </div>
+				<div class="t_time">15</div>
+			</div>
 
 		</table>
 	</div>
@@ -141,13 +141,6 @@
 
 
 
-
-
-
-
-
-
-	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123176832-1"></script>
 	<script>
