--- a/plastic-anatomy-course-minsk.html
+++ b/plastic-anatomy-course-minsk.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Курс "Пластическая анатомия для художников".</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#E7D0BC">
+    <meta name="viewport" content="widdiv=device-widdiv, initial-scale=1.0" />
+    <meta name="diveme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Программа обучения по курсу 'Пластическая анатомия для художников'" />        
@@ -47,78 +47,78 @@
 		<h1>Программа курса "Пластическая анатомия для художников"</h1>
 
 		<table class="table " border="1">
-			<tr>
-				<th class="t_numb">номер</th>
-				<th class="t_name">Название темы</th>
-				<th class="t_desc">Программа занятий по теме</th>
-				<th class="t_time">Время (академ. часы)</th>
-			</tr>
-			<tr>
-				<td class="t_numb">1</td>
-				<td class="t_name">Понятие «Пластическая анатомия».</td>
-				<td class="t_desc">Пропорции человека (ребенок/взрослый, муж/жен, типы фигуры ). Опорные точки при построении человеческой фигуры. Графическая работа.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">2</td>
-				<td class="t_name">Скелет.</td>
-				<td class="t_desc">Лекция и граф.р. зарисовка скелета с трех сторон, виды суставов.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">3</td>
-				<td class="t_name">Череп.</td>
-				<td class="t_desc">Изучение костей черепа. Опорные точки при построении. Практ.р. череп с трех сторон.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">4</td>
-				<td class="t_name">Торс.</td>
-				<td class="t_desc">Опорные точки при построении торса. Практ.р. торс с трех сторон .</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">5</td>
-				<td class="t_name">Скелет верхних конечностей.</td>
-				<td class="t_desc">Изучение строения скелета конечностей. Практическая работа: рука с двух сторон, в супинации и пронации.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">6</td>
-				<td class="t_name">Скелет нижних конечностей.</td>
-				<td class="t_desc">Изучение строения скелета конечностей. Практическая работа: нога с двух сторон.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">7</td>
-				<td class="t_name">Кисти и стопы.</td>
-				<td class="t_desc">Изучение строения скелета кистей и стоп.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">8</td>
-				<td class="t_name">Мышцы черепа и шеи.</td>
-				<td class="t_desc">Лекция (начало,прикрепление и действие мышцы). Графическая работа по теме.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">9</td>
-				<td class="t_name">Мышцы торса.</td>
-				<td class="t_desc">Лекция (начало,прикрепление и действие мышцы). Графическая работа по теме.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">10</td>
-				<td class="t_name">Мышцы верхних конечностей.</td>
-				<td class="t_desc">Лекция (начало,прикрепление и действие мышцы). Графическая работа по теме.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">11</td>
-				<td class="t_name">Мышцы нижних конечностей.</td>
-				<td class="t_desc">Лекция (начало,прикрепление и действие мышцы). Графическая работа по теме.</td>
-				<td class="t_time">6</td>
-			</tr>
+			<div class="table-row head">
+				<div class="t_numb">номер</div>
+				<div class="t_name">Название темы</div>
+				<div class="t_desc">Программа занятий по теме</div>
+				<div class="t_time">Время (академ. часы)</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">1</div>
+				<div class="t_name">Понятие «Пластическая анатомия».</div>
+				<div class="t_desc">Пропорции человека (ребенок/взрослый, муж/жен, типы фигуры ). Опорные точки при построении человеческой фигуры. Графическая работа.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">2</div>
+				<div class="t_name">Скелет.</div>
+				<div class="t_desc">Лекция и граф.р. зарисовка скелета с трех сторон, виды суставов.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">3</div>
+				<div class="t_name">Череп.</div>
+				<div class="t_desc">Изучение костей черепа. Опорные точки при построении. Практ.р. череп с трех сторон.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">4</div>
+				<div class="t_name">Торс.</div>
+				<div class="t_desc">Опорные точки при построении торса. Практ.р. торс с трех сторон .</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">5</div>
+				<div class="t_name">Скелет верхних конечностей.</div>
+				<div class="t_desc">Изучение строения скелета конечностей. Практическая работа: рука с двух сторон, в супинации и пронации.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">6</div>
+				<div class="t_name">Скелет нижних конечностей.</div>
+				<div class="t_desc">Изучение строения скелета конечностей. Практическая работа: нога с двух сторон.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">7</div>
+				<div class="t_name">Кисти и стопы.</div>
+				<div class="t_desc">Изучение строения скелета кистей и стоп.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">8</div>
+				<div class="t_name">Мышцы черепа и шеи.</div>
+				<div class="t_desc">Лекция (начало,прикрепление и действие мышцы). Графическая работа по теме.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">9</div>
+				<div class="t_name">Мышцы торса.</div>
+				<div class="t_desc">Лекция (начало,прикрепление и действие мышцы). Графическая работа по теме.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">10</div>
+				<div class="t_name">Мышцы верхних конечностей.</div>
+				<div class="t_desc">Лекция (начало,прикрепление и действие мышцы). Графическая работа по теме.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">11</div>
+				<div class="t_name">Мышцы нижних конечностей.</div>
+				<div class="t_desc">Лекция (начало,прикрепление и действие мышцы). Графическая работа по теме.</div>
+				<div class="t_time">6</div>
+			</div>
 			
 
 		</table>
@@ -129,13 +129,6 @@
 
 
 
-
-
-
-
-
-
-	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123176832-1"></script>
 	<script>
