--- a/sculpting-course-for-enrollee-minsk.html
+++ b/sculpting-course-for-enrollee-minsk.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Курс "Скульптура для поступающих".</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#E7D0BC">
+    <meta name="viewport" content="widdiv=device-widdiv, initial-scale=1.0" />
+    <meta name="diveme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Программа обучения по курсу 'Скульптура для поступающих'" />        
@@ -54,60 +54,60 @@
 		<p>- научиться придавать точную и образно-зримую форму любой информации.</p>
 
 		<table class="table " border="1">
-			<tr>
-				<th class="t_numb">номер</th>
-				<th class="t_name">Название темы</th>
-				<th class="t_desc">Программа занятий по теме</th>
-				<th class="t_time">Время (академ. часы)</th>
-			</tr>
-			<tr>
-				<td class="t_numb">1</td>
-				<td class="t_name">Лепка кувшина.</td>
-				<td class="t_desc">Изучить пропорции кувшина.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">2</td>
-				<td class="t_name">Лепка простой розетки.</td>
-				<td class="t_desc">Изучение симметрии и ассимметрии в рельефе.</td>
-				<td class="t_time">12</td>
-			</tr>
-			<tr>
-				<td class="t_numb">3</td>
-				<td class="t_name">Лепка драпировки.</td>
-				<td class="t_desc">Изучение пластики форм.</td>
-				<td class="t_time">12</td>
-			</tr>
-			<tr>
-				<td class="t_numb">4</td>
-				<td class="t_name">Лепка частей лица (нос, губы, глаз, ухо).</td>
-				<td class="t_desc">Изучение пластики частей лица, изучение конструктивно-анатомического строения частей лица.</td>
-				<td class="t_time">30</td>
-			</tr>
-			<tr>
-				<td class="t_numb">5</td>
-				<td class="t_name">Лепка обрубовочной головы.</td>
-				<td class="t_desc">Изучение основных плоскостей головы человека.</td>
-				<td class="t_time">18</td>
-			</tr>
-			<tr>
-				<td class="t_numb">6</td>
-				<td class="t_name">Лепка черепа.</td>
-				<td class="t_desc">Изучение формы и пропорций человеческого черепа.</td>
-				<td class="t_time">15</td>
-			</tr>
-			<tr>
-				<td class="t_numb">7</td>
-				<td class="t_name">Лепка головы с мышцами ( Экорше ).</td>
-				<td class="t_desc">Изучение анатомического рельефа лица.</td>
-				<td class="t_time">18</td>
-			</tr>
-			<tr>
-				<td class="t_numb">8</td>
-				<td class="t_name">Лепка гипсовой головы Венеры.</td>
-				<td class="t_desc">Передача индивидуальных черт лица и пропорций.</td>
-				<td class="t_time">18</td>
-			</tr>
+			<div class="table-row head">
+				<div class="t_numb">номер</div>
+				<div class="t_name">Название темы</div>
+				<div class="t_desc">Программа занятий по теме</div>
+				<div class="t_time">Время (академ. часы)</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">1</div>
+				<div class="t_name">Лепка кувшина.</div>
+				<div class="t_desc">Изучить пропорции кувшина.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">2</div>
+				<div class="t_name">Лепка простой розетки.</div>
+				<div class="t_desc">Изучение симметрии и ассимметрии в рельефе.</div>
+				<div class="t_time">12</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">3</div>
+				<div class="t_name">Лепка драпировки.</div>
+				<div class="t_desc">Изучение пластики форм.</div>
+				<div class="t_time">12</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">4</div>
+				<div class="t_name">Лепка частей лица (нос, губы, глаз, ухо).</div>
+				<div class="t_desc">Изучение пластики частей лица, изучение конструктивно-анатомического строения частей лица.</div>
+				<div class="t_time">30</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">5</div>
+				<div class="t_name">Лепка обрубовочной головы.</div>
+				<div class="t_desc">Изучение основных плоскостей головы человека.</div>
+				<div class="t_time">18</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">6</div>
+				<div class="t_name">Лепка черепа.</div>
+				<div class="t_desc">Изучение формы и пропорций человеческого черепа.</div>
+				<div class="t_time">15</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">7</div>
+				<div class="t_name">Лепка головы с мышцами ( Экорше ).</div>
+				<div class="t_desc">Изучение анатомического рельефа лица.</div>
+				<div class="t_time">18</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">8</div>
+				<div class="t_name">Лепка гипсовой головы Венеры.</div>
+				<div class="t_desc">Передача индивидуальных черт лица и пропорций.</div>
+				<div class="t_time">18</div>
+			</div>
 			
 
 		</table>
