--- a/illustration-course-for-beginer-minsk.html
+++ b/illustration-course-for-beginer-minsk.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Курс "Иллюстрация для начинающих".</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#E7D0BC">
+    <meta name="viewport" content="widdiv=device-widdiv, initial-scale=1.0" />
+    <meta name="diveme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Программа обучения по курсу 'Иллюстрация для начинающих'" />        
@@ -48,78 +48,78 @@
 
 
 		<table class="table " border="1">
-			<tr>
-				<th class="t_numb">номер</th>
-				<th class="t_name">Название темы</th>
-				<th class="t_desc">Программа занятий по теме</th>
-				<th class="t_time">Время (академ. часы)</th>
-			</tr>
-			<tr>
-				<td class="t_numb">1</td>
-				<td class="t_name">Стилизация человеческой фигуры.</td>
-				<td class="t_desc">Виды и принципы стилизации, практика.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">2</td>
-				<td class="t_name">Макет персонажа.</td>
-				<td class="t_desc">Эмоциональный лист, поиск формы, позы, одежды и т.д., графические приемы для передачи характера и настроения.</td>
-				<td class="t_time">8</td>
-			</tr>
-			<tr>
-				<td class="t_numb">3</td>
-				<td class="t_name">Ракурс, статика и динамика персонажа.</td>
-				<td class="t_desc">Практическое занятие.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">4</td>
-				<td class="t_name">Персонаж и обстановка.</td>
-				<td class="t_desc">Работа с текстом, создание иллюстрации отдельного сюжета.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">5</td>
-				<td class="t_name">Стилизация животного.</td>
-				<td class="t_desc">Графические приемы для передачи характера и настроения.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">6</td>
-				<td class="t_name">Линейка персонажа .</td>
-				<td class="t_desc">эмоциональный лист, поиск формы, позы и т.д.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">7</td>
-				<td class="t_name">Многофигурная композиция.</td>
-				<td class="t_desc">Разработка многофигурной динамичной композиции.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">8</td>
-				<td class="t_name">Оформление книги.</td>
-				<td class="t_desc">Создание иллюстрации обложки, фронтисписа, титульного листа, заставки.</td>
-				<td class="t_time">6</td>
-			</tr>
-			<tr>
-				<td class="t_numb">9</td>
-				<td class="t_name">Создание атмосферной иллюстрации.</td>
-				<td class="t_desc">Работа над графическими и живописными приемами для создания определенной атмосферы.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">10</td>
-				<td class="t_name">Работа над иллюстрацией пословиц и поговорок.</td>
-				<td class="t_desc">Раскадровка. Сюжет в нескольких иллюстрациях.</td>
-				<td class="t_time">4</td>
-			</tr>
-			<tr>
-				<td class="t_numb">11</td>
-				<td class="t_name">Итоговое задание.</td>
-				<td class="t_desc">Самостоятельная работа на основе полцченных знаний и умений.</td>
-				<td class="t_time">8</td>
-			</tr>
+			<div class="table-row head">
+				<div class="t_numb">номер</div>
+				<div class="t_name">Название темы</div>
+				<div class="t_desc">Программа занятий по теме</div>
+				<div class="t_time">Время (академ. часы)</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">1</div>
+				<div class="t_name">Стилизация человеческой фигуры.</div>
+				<div class="t_desc">Виды и принципы стилизации, практика.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">2</div>
+				<div class="t_name">Макет персонажа.</div>
+				<div class="t_desc">Эмоциональный лист, поиск формы, позы, одежды и т.д., графические приемы для передачи характера и настроения.</div>
+				<div class="t_time">8</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">3</div>
+				<div class="t_name">Ракурс, статика и динамика персонажа.</div>
+				<div class="t_desc">Практическое занятие.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">4</div>
+				<div class="t_name">Персонаж и обстановка.</div>
+				<div class="t_desc">Работа с текстом, создание иллюстрации отдельного сюжета.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">5</div>
+				<div class="t_name">Стилизация животного.</div>
+				<div class="t_desc">Графические приемы для передачи характера и настроения.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">6</div>
+				<div class="t_name">Линейка персонажа .</div>
+				<div class="t_desc">эмоциональный лист, поиск формы, позы и т.д.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">7</div>
+				<div class="t_name">Многофигурная композиция.</div>
+				<div class="t_desc">Разработка многофигурной динамичной композиции.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">8</div>
+				<div class="t_name">Оформление книги.</div>
+				<div class="t_desc">Создание иллюстрации обложки, фронтисписа, титульного листа, заставки.</div>
+				<div class="t_time">6</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">9</div>
+				<div class="t_name">Создание атмосферной иллюстрации.</div>
+				<div class="t_desc">Работа над графическими и живописными приемами для создания определенной атмосферы.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">10</div>
+				<div class="t_name">Работа над иллюстрацией пословиц и поговорок.</div>
+				<div class="t_desc">Раскадровка. Сюжет в нескольких иллюстрациях.</div>
+				<div class="t_time">4</div>
+			</div>
+			<div class="table-row">
+				<div class="t_numb">11</div>
+				<div class="t_name">Итоговое задание.</div>
+				<div class="t_desc">Самостоятельная работа на основе полцченных знаний и умений.</div>
+				<div class="t_time">8</div>
+			</div>
 			
 
 		</table>
@@ -128,15 +128,6 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123176832-1"></script>
 	<script>
